<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Activity55">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/borde_textview"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/titulo_programacion"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/custom_red"
        tools:text="PULSADO SÁBADO" />

    <RadioGroup
        android:id="@+id/radioGroupDias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/rbLunes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dia_lunes" />

        <RadioButton
            android:id="@+id/rbMartes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dia_martes" />

        <RadioButton
            android:id="@+id/rbMiercoles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dia_miercoles" />

        <RadioButton
            android:id="@+id/rbJueves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dia_jueves" />

        <RadioButton
            android:id="@+id/rbViernes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dia_viernes" />

        <RadioButton
            android:id="@+id/rbSabado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dia_sabado" />

        <RadioButton
            android:id="@+id/rbDomingo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dia_domingo" />
    </RadioGroup>

</LinearLayout>
